// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package org.wfa.measurement.testing;

option java_package = "org.wfanet.measurement.testing";
option java_multiple_files = true;

// Configuration used to test common libraries.
message TestConfig {
  message Entry {
    map<string, bytes> elements = 4;
  }

  // Map string to config entry.
  map<string, Entry> entries = 1;

  message BodyChunk {
    // A chunk of the data bytes.
    bytes partial_data = 1;
  }

  oneof payload {
    // Payload of request messages.
    BodyChunk body_chunk = 2;
  }
}
